Fix whitespaces in SVG icons / liquid

--- a/_sass/_interactivity.scss
+++ b/_sass/_interactivity.scss
@@ -130,7 +130,7 @@ button svg,
   height: 1.25em;
   width: 1.25em;
   vertical-align: text-bottom;
-  padding-right: 0.2em;
+  padding-right: 0.3em;
   overflow: hidden;
 }
 
